syntax = "proto3";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

package com.demomq.v0;

option java_multiple_files = true;
option java_package = "com.demomq.v0";
option java_generate_equals_and_hash = true;
option java_string_check_utf8 = true;
option java_outer_classname = "MQService";


service MessagingService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {}
}

message SendMessageRequest {
  repeated Message messages = 1;
}
message Message {
  string topic = 1;
  map<string, string> user_properties = 2;
  map<string, string> system_properties = 3;
  bytes body = 4;
}

message SendMessageResponse {
  string status = 1;
  repeated SendResultEntry entries = 2;
}
message SendResultEntry {
  string status = 1;
  string message_id = 2;
  string transaction_id = 3;
  int64 offset = 4;
}
